Add running as admin, disable saving LCU path and add an option to print event content